--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,15 +25,27 @@
         <activity
             android:name=".ui.news.NewsDetailActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
+
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".ui.loading_screen.OnBoarding"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".ui.setting.activity_preference">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
