--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,5 +88,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    // Added for unresolved reference to ActivityTestRule
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
 
 }
