--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
 
-<<<<<<< HEAD
+//<<<<<<< HEAD
     // testing
 
     testImplementation 'junit:junit:4.12'
@@ -127,7 +127,11 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-android:2.18.3'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.6.0'
 
+    androidTestImplementation 'com.android.support.test:runner:0.2'
+    androidTestImplementation 'com.android.support.test:rules:0.2'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+
 }
-=======
-}
->>>>>>> c5224694162fc3b3b251ee65af3304b2f9595654
+//=======
+//}
+//>>>>>>> c5224694162fc3b3b251ee65af3304b2f9595654
