--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:0.2'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
 
+    debugImplementation "androidx.fragment:fragment-testing:1.3.2"
 }
 //=======
 //}
